--- a/index.html
+++ b/index.html
@@ -13,16 +13,24 @@
     <header>
         <div class="container-fluid backcol head-size">
                 <div class="py-1 container-sm d-flex justify-content-between align-items-center text-light">
-                    <div class="text-uppercase title-size">Start Bootstrap</div>
+                    <div class="text-uppercase">Start Bootstrap</div>
                     <div class="d-flex justify-content-end align-items-center">
                         <ol class="list-unstyled d-flex justify-content-end">
-                            <li><a class="pt-3 text-light text-decoration-none d-none d-lg-block" href="#">Portfolio</a></li>
-                            <li><a class="pt-3 text-light text-decoration-none px-4 d-none d-lg-block" href="#">About</a></li>
-                            <li><a class="pt-3 text-light text-decoration-none d-none d-lg-block" href="#">Contact</a></li> 
+                            <li><a class="pt-3 text-light text-decoration-none d-none d-lg-block" href="#portfolio">Portfolio</a></li>
+                            <li><a class="pt-3 text-light text-decoration-none px-4 d-none d-lg-block" href="#about">About</a></li>
+                            <li><a class="pt-3 text-light text-decoration-none d-none d-lg-block" href="#contact">Contact</a></li> 
                         </ol>
-                        <div class="ps-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                        </svg>
+                        <div class="dropdown ms-3">
+                            <button class="btn text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                                </svg>
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#form">Message us</a></li>
+                              <li><a class="dropdown-item" href="#">Go to chart</a></li>
+                              <li><a class="dropdown-item" href="#">About us</a></li>
+                            </ul>
                         </div>
                     </div>
             </div>
@@ -49,13 +57,13 @@
                       </svg>
                 </div>
                 <!-- DESCRIZIONE -->
-                <div class="bp-2 text-uppercase size pb-3">
+                <div class="bp-5 text-uppercase size">
                      <div>Graphic Artist - Web Designer - Illustrator</div>
                 </div>
             </div>
         </div>
         <!-- Portfolio -->
-        <div class="container-fluid">
+        <div id="portfolio" class="container-fluid">
             <div class="container-sm d-flex align-items-center flex-column mb-3 fw-bold">
 
                 <!-- -----STELLA---- -->
@@ -95,7 +103,7 @@
             </div>
         </div>    
         <!-- ABOUT  -->
-        <div class="container-fluid greenback">
+        <div id="about" class="container-fluid greenback">
             <div class="py-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
                 <div class="text-uppercase fs-1 text">About</div>
                 <div class="d-flex align-items-end mb-3">
@@ -124,22 +132,81 @@
             </div>
         </div>
         <!-- CONTACT SECTION  -->
-        <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 fw-bold">
-            <div class="text-uppercase fs-1 text">Contact me </div>
-            <!-- STELLA  -->
-            <div class="d-flex align-items-end mb-3">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
-              </svg>
-              <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-              </svg></div>
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
-              </svg>
+        <div id="contact" class="container-fluid">
+            <div class="pt-3 container-sm d-flex align-items-center flex-column mb-3 fw-bold">
+                <div class="text-uppercase fs-1 text">Contact me </div>
+                <!-- STELLA  -->
+                <div class="d-flex align-items-end mb-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                </svg>
+                <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                </svg></div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+                </svg>
+                </div>
+                <!-- FORM -->           
+            </div>
+            <div id="form" class="pt-3 container-sm d-flex align-items center mb-3 fw-bold">
+                <form class="parted" action="" method="GET" name="Register">
+                    <!-- INSERT NAME  -->
+                    <div class="my-2">
+                        <label class="" for="first-name">
+                            <button class="button-style mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                Name
+                             </button>
+                        </label>
+                        <div class="collapse" id="collapseExample">
+                          <div class="card card-boy">
+                              <input name="first_name" id="first-name" class="input-style" type="text" placeholder="Inserisci il tuo nome" required>
+                          </div>
+                        </div>
+                    </div>
+                    <!-- INSERT EMAIL  -->
+                    <div class="my-2">
+                        <label class="" for="email">
+                            <button class="button-style mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                Email
+                             </button>
+                        </label>
+                        <div class="collapse" id="collapseExample">
+                          <div class="card card-boy">
+                              <input name="email" id="email" class="input-style" type="email" placeholder="Inserisci indirizzo email" required>
+                          </div>
+                        </div>
+                    </div>
+                    <!-- INSERET PHONE NUMBER  -->
+                    <div class="my-2">
+                        <label class="" for="phone">
+                            <button class="button-style mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                Phone Number
+                             </button>
+                        </label>
+                        <div class="collapse" id="collapseExample">
+                          <div class="card card-boy">
+                            <input name="phone_number" id="phone" class="input-style" type="text" placeholder="Inserisci numero di telefono" required>
+                          </div>
+                        </div>
+                    </div>
+                    <!-- INSERT MESSAGE -->
+                    <div class="my-2">
+                        <label class="" for="message">
+                            <button class="button-style mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                Message
+                             </button>
+                        </label>
+                        <div class="collapse" id="collapseExample">
+                          <div class="card card-boy">
+                            <textarea class="input-style" name="text" id="message" cols="30" rows="10" placeholder="Inserisci il tuo messaggio" minlength="10"></textarea>
+                        </div>
+                        </div>
+                    </div>
+                    <input class="send mt-1" type="submit" name="send" value="Send">
+                </form>
             </div>
         </div>
-
     </main>
     <!-- FOOTER SECTION -->
     <footer>
@@ -184,13 +251,11 @@
             </div>
         </div>     
         <div class="container-fluid bg-secondary">
-            <div class="pt-3 pb-3 container-sm d-flex align-items-center flex-column mb-3 text-light fw-bold">
+            <div class="pt-3 pb-3 container-sm d-flex align-items-center flex-column text-light fw-bold">
                 <div>Copyright @ Your Website 2019</div>
             </div>
         </div>     
-
     </footer>
-
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
